Files for examination 1 prepared for first round of validation

--- a/djupvikshamn/html/contact.html
+++ b/djupvikshamn/html/contact.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
+
 <html lang="sv">
 	<head>
-		<title>Djupviks Hamn - Kontakt</title>
+		<title>Kontakt - Djupviks Hamn</title>
 		<meta charset="UTF-8" />
 	</head>
 
@@ -17,12 +19,13 @@
 
 			<!-- site navigation -->
 			<nav>
-				<a href="./html/contact.html">Kontakt</a>
-				<a href="./html/English.html">English</a>
-				<a href="./html/guest.html">Guest</a>
-				<a href="./html/history.html">History</a>
-				<a href="./html/info.html">Info</a>
-				<a href="./html/members.html">Members</a>
+				<a href="../index.html">Start</a>
+				<a href="./info.html">Information</a>
+				<a href="./guest.html">Gästplatser</a>
+				<a href="./history.html">Historia</a>
+				<a href="./contact.html">Kontakt</a>
+				<a href="./members.html">Medlem</a>
+				<a href="./english.html">In English</a>
 			</nav>
 
 		</header>
