--- a/djupvikshamn/index.html
+++ b/djupvikshamn/index.html
@@ -15,7 +15,7 @@
 
 <html lang="sv">
 	<head>
-		<title>Djupviks Hamn</title>
+		<title>Start - Djupviks Hamn</title>
 		<meta charset="UTF-8" />
 	</head>
 
@@ -32,18 +32,19 @@
 
 			<!-- site navigation -->
 			<nav>
+				<a href="./index.html">Start</a>
+				<a href="./html/info.html">Information</a>
+				<a href="./html/guest.html">Gästplatser</a>
+				<a href="./html/history.html">Historia</a>
 				<a href="./html/contact.html">Kontakt</a>
-				<a href="./html/English.html">English</a>
-				<a href="./html/guest.html">Guest</a>
-				<a href="./html/history.html">History</a>
-				<a href="./html/info.html">Info</a>
-				<a href="./html/members.html">Members</a>
+				<a href="./html/members.html">Medlem</a>
+				<a href="./html/english.html">In English</a>
 			</nav>
 
 		</header>
 		
 		<!-- short information about djupvik -->
-		<section>
+		<section id="indexInfo">
 			<h2>Övergripande Info:</h2>
 			<p>
 				Djupviks hamn ligger på Gotlands västkust nästan rakt öster om Lilla Karlsö.
@@ -55,7 +56,7 @@
 		</section>
 
 		<!-- condensed newsfeed -->
-		<section>
+		<section id="indexNewsfeed">
 			<h2>Senaste Nytt</h2>
 			<article>
 				<h2>Succé för hamnens dag!</h2>
@@ -96,7 +97,7 @@
 		</section>
 
 		<!-- supposedly a column of images from Djupvik -->
-		<figure>
+		<figure id="indexImages">
 			<!-- will need reformatting in width and/or height when CSS is introduced -->
 			<img src="./images/boats_in_dock.jpg" alt="Flera båtar som ligger vid en av hamnens bryggor." width="100"/>
 			<img src="./images/calmwaters.jpg" alt="Fyra stugor med havet och Karlsö som fond." width="100"/>
