--- a/djupvikshamn/html/members.html
+++ b/djupvikshamn/html/members.html
@@ -1,18 +1,110 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="sv">
 	<head>
-		<title>TITLE</title>
-		<meta charset = "UTF-8" />
+		<title>Information - Djupviks Hamn</title>
+		<meta charset="UTF-8" />
 	</head>
 
 	<body>
+
+		<!-- page header -->
+		<header>
+			<!-- index page for djupviks hamn -->
+			<h1>Djupvik</h1>
+
+			<!-- header image -->
+			<img src="../images/layout/header.png" width="1900" 
+			alt="Sidans rubrikbild, vy över havet vid solnedgång"/>
+
+			<!-- site navigation -->
+			<nav>
+				<a href="../index.html">Start</a>
+				<a href="./info.html">Information</a>
+				<a href="./guest.html">Gästplatser</a>
+				<a href="./history.html">Historia</a>
+				<a href="./contact.html">Kontakt</a>
+				<a href="./members.html">Medlemsinfo</a>
+				<a href="./english.html">In English</a>
+			</nav>
+
+		</header>
+
+		<!-- information about Djupvik's members -->
 		<section>
-			<!-- Comment for H1 -->
-			<h1>H1</h1>
-			<h2>H2</h2>
-			<!-- a comment for a subitem -->
-				<a href="./about/me.html">Me</a>
+			<h2>Medlemmar</h2>
+
+				<table>
+					<tr>
+						<th>Förnamn</th>
+						<th>Efternamn</th>
+						<!-- is bostadsadress != postadress? -->
+						<!-- what i beleive you are after:
+						Förnamn, Efternamn, GATUadress, Postnummer och postORT -->
+						<th>Bostadsadress</th>
+						<th>Postnummer och Postadress</th>
+					</tr>
+					<tr>
+						<td>Tarmo</td>
+						<td>Heikkilä</td>
+						<td>Stora Lillgatan 42C</td>
+						<td>123 45 Helsingör</td>
+					</tr>
+					<tr>
+						<td>Vesa</td>
+						<td>Salminen</td>
+						<td>Sveavägen 124</td>
+						<td>987 65 Fryshult</td>
+					</tr>
+					<tr>
+						<td>Sinikka</td>
+						<td>Karjalainen</td>
+						<td>Fjällstigen 63</td>
+						<td>743 89 Luleå</td>
+					</tr>
+					<tr>
+						<td>Kalevi</td>
+						<td>Savolainen</td>
+						<td>Midsommargatan 93</td>
+						<td>836 58 Bengtsfors</td>
+					</tr>
+					<tr>
+						<td>Jorma</td>
+						<td>Ahonen</td>
+						<td>Nattvägen 73</td>
+						<td>874 32 Högbo</td>
+					</tr>
+					<tr>
+						<td>Einari</td>
+						<td>Kallio</td>
+						<td>Skruvmejselgången 64</td>
+						<td>242 32Odensala</td>
+					</tr>
+					<tr>
+						<td>Heikki</td>
+						<td>Pitkänen</td>
+						<td>Stjärngatan 25</td>
+						<td>362 52 Valbo</td>
+					</tr>
+					<tr>
+						<td>Oskari</td>
+						<td>Salo</td>
+						<td>Grönlandsgången 25</td>
+						<td>125 23 Kista</td>
+					</tr>
+				</table>
+
 		</section>
+
+
+
+		<!-- page footer -->
+		<footer>
+			<h2>Inte medlem?</h2>
+			<p>
+				Såhär gör du!
+			</p>
+		</footer>
+
 	</body>
 </html>
