--- a/djupvikshamn/html/history.html
+++ b/djupvikshamn/html/history.html
@@ -78,30 +78,29 @@
 					Denna berättelse är skriven med personernas vardagsnamn, namnförklaring kommer på slutet. Det var fint väder vid middagstid den 26/10 1941 när tre båtlag gav sig av ut på driv med strömmingsgarn. Vädret var fint ända tills de satt klart, då började det blåsa upp till nordlig storm. Man började genast dra upp garnen igen, för att komma i land så fort som möjligt. Det var bara ett båtlag som kom till Djupvik, det var båtlaget med Alfred Pettsen, Ajvide Ebe och Bas-Hugo. Ett båtlag kom i land i Vavle, det var Konne Grömlings, Tomsare Ricken och Pauels Lasse. Mellan Djupvik och Vavle är inte så långt så att man kunde snabbt meddela till Djupvik att man kommit i land i Vavle. Det hade blivit bensintorrt och i all turbulens i stormen och mörkret tog Grymlingen fel dunk, han hällde på vatten så motorn startade inte.
 				</p>
 
-				<p>
-					<dl>
-						<dt>Namnförklaring:</dt>
-						<dt>Alfred Pettsen</dt>
-							<dd>Alfred Pettersson</dd>
-						<dt>Ajvide Ebe</dt>
-							<dd>Edvin jakobsson, Ajvide</dd>
-						<dt>Bas-Hugo</dt>
-							<dd>Hugo Andersson, Burge</dd>
-						<dt>Konne Grömlings</dt>
-							<dd>Konrad Olofsson, Grymlings</dd>
-						<dt>Tomsare Ricken</dt>
-							<dd>Richard Andersson, Tomsarve</dd>
-						<dt>Pauels Lasse</dt>
-							<dd>Lars Jakobsson, Bjerges</dd>
-						<dt>Gust Olsen</dt>
-							<dd>Gustav Olsson, Dinse</dd>
-						<dt>Kälstu-Gusten</dt>
-							<dd>Gustav Lickander, Ajvide</dd>
-						<dt>Burg-Jaken</dt>
-							<dd>Jakob Uddin, Burge</dd>
-					</dl>
-				</p>
-				
+				<!-- the list of names from the story -->
+				<dl>
+					<dt>Namnförklaring:</dt>
+					<dt>Alfred Pettsen</dt>
+						<dd>Alfred Pettersson</dd>
+					<dt>Ajvide Ebe</dt>
+						<dd>Edvin jakobsson, Ajvide</dd>
+					<dt>Bas-Hugo</dt>
+						<dd>Hugo Andersson, Burge</dd>
+					<dt>Konne Grömlings</dt>
+						<dd>Konrad Olofsson, Grymlings</dd>
+					<dt>Tomsare Ricken</dt>
+						<dd>Richard Andersson, Tomsarve</dd>
+					<dt>Pauels Lasse</dt>
+						<dd>Lars Jakobsson, Bjerges</dd>
+					<dt>Gust Olsen</dt>
+						<dd>Gustav Olsson, Dinse</dd>
+					<dt>Kälstu-Gusten</dt>
+						<dd>Gustav Lickander, Ajvide</dd>
+					<dt>Burg-Jaken</dt>
+						<dd>Jakob Uddin, Burge</dd>
+				</dl>
+
 
 		</article>
 
