--- a/djupvikshamn/html/members.html
+++ b/djupvikshamn/html/members.html
@@ -39,7 +39,7 @@
 						<th>Förnamn</th>
 						<th>Efternamn</th>
 						<!-- is bostadsadress != postadress? -->
-						<!-- what i beleive you are after:
+						<!-- what i believe you are after:
 						Förnamn, Efternamn, GATUadress, Postnummer och postORT -->
 						<th>Bostadsadress</th>
 						<th>Postnummer och Postadress</th>
