--- a/djupvikshamn/html/english.html
+++ b/djupvikshamn/html/english.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="sv">
+<html lang="en">
 	<head>
 		<title>In English - Djupviks Hamn</title>
 		<meta charset="UTF-8" />
