Slight change to nav for a page

--- a/djupvikshamn/index.html
+++ b/djupvikshamn/index.html
@@ -37,7 +37,7 @@
 				<a href="./html/guest.html">Gästplatser</a>
 				<a href="./html/history.html">Historia</a>
 				<a href="./html/contact.html">Kontakt</a>
-				<a href="./html/members.html">Medlem</a>
+				<a href="./html/members.html">Medlemsinfo</a>
 				<a href="./html/english.html">In English</a>
 			</nav>
 
