Updated code structure based on received feedback

--- a/djupvikshamn/html/english.html
+++ b/djupvikshamn/html/english.html
@@ -1,93 +1,95 @@
 <!DOCTYPE html>
 
 <html lang="en">
-	<head>
-		<title>In English - Djupviks Hamn</title>
-		<meta charset="UTF-8" />
-	</head>
+<head>
+	<title>In English - Djupviks Hamn</title>
+	<meta charset="UTF-8" />
+</head>
 
-	<body>
+<body>
 
-		<!-- page header -->
-		<header>
-			<!-- index page for djupviks hamn -->
-			<h1>Djupvik</h1>
+	<!-- page header -->
+	<header>
+		<!-- index page for djupviks hamn -->
+		<h1>Djupvik</h1>
 
-			<!-- header image -->
-			<img src="../images/layout/header.png" width="1900" 
-			alt="Sidans rubrikbild, vy över havet vid solnedgång"/>
+		<!-- header image -->
+		<img src="../images/layout/header.png" width="1900" 
+		alt="Sidans rubrikbild, vy över havet vid solnedgång"/>
 
-			<!-- site navigation -->
-			<nav>
-				<a href="../index.html">Start</a>
-				<a href="./info.html">Information</a>
-				<a href="./guest.html">Guest moorings</a>
-				<a href="./history.html">History</a>
-				<a href="./contact.html">Contact</a>
-				<a href="./members.html">Members</a>
-				<a href="./english.html">In English</a>
-			</nav>
+		<!-- site navigation -->
+		<nav>
+			<ul>
+				<li><a href="../index.html">Start</a></li>
+				<li><a href="./info.html">Information</a></li>
+				<li><a href="./guest.html">Guest moorings</a></li>
+				<li><a href="./history.html">History</a></li>
+				<li><a href="./contact.html">Contact</a></li>
+				<li><a href="./members.html">Members</a></li>
+				<li><a href="./english.html">In English</a></li>
+			</ul>
+		</nav>
 
-		</header>
-		
-		<!-- images from Djupvik -->
-		<figure id="infoImages">
-			<!-- will need reformatting in width and/or height when CSS is introduced -->
-			<img src="../images/garngard-daniel.jpg" alt="Djupvik's garngard, a place for fishermen to hang dry their nets." width="100"/>
-			<img src="../images/solnedgang.jpg" alt="Sunset over the harbour." width="100"/>
-			<img src="../images/hamn-eva.jpg" alt="A fishing boat arrives at the harbour." width="100"/>
+	</header>
+	
+	<!-- images from Djupvik -->
+	<figure id="infoImages">
+		<!-- will need reformatting in width and/or height when CSS is introduced -->
+		<img src="../images/garngard-daniel.jpg" alt="Djupvik's garngard, a place for fishermen to hang dry their nets." width="100"/>
+		<img src="../images/solnedgang.jpg" alt="Sunset over the harbour." width="100"/>
+		<img src="../images/hamn-eva.jpg" alt="A fishing boat arrives at the harbour." width="100"/>
 
-			<figcaption>
-				En bild säger mer än tusen ord, vi skulle dock behövt många fler 
-				bilder för att ge dig en komplett bild utav Djupvik.
-			</figcaption>
+		<figcaption>
+			En bild säger mer än tusen ord, vi skulle dock behövt många fler 
+			bilder för att ge dig en komplett bild utav Djupvik.
+		</figcaption>
 
-		</figure>
+	</figure>
 
-		<!-- english information about Djupviks Hamn -->
-		<section id="englishInfo">
-			<h2>Welcome to Djupvik</h2>
-				<p>
-					The Port of Djupvik is located on the east coast of Gotland 
-					very close to the beautiful smaller island Lilla Karlsö.
-					Adjacent to the the port is a small and charming fishing-village 
-					which, during summer, comes to life with a relaxed and welcoming buzz.
-
-					Close by and situated with a fantastic view over the port is 
-					Djupviks Hotel, with modern standard and with its own popular restaurant.
-
-					Both the port and the fishing-village has a beautiful view of 
-					two popular bird-islands called “Lilla Karlsö” and “Stora Karlsö”.
-
-					The coastline south of Djupvik, called “Ekstakusten” is incredibly 
-					beautiful and invites to nice scenery and views on foot, by bike or by car.
-
-					North, and connected to the port is a small sandy beach which is well soothed for a nice swim.
-
-					The distance from the port to Lilla Karlsö is about 2 nautical 
-					miles and it is about twice as long to Stora Karlsö (4nm).
-
-					<!-- https is more or less the standard nowadays, can it be assumed that it is used for the links? -->
-					For more information, check out the websites: <a href="http://lillakarlso.org">lillakarlso.org</a> and <a href="http://storakarlso.se">storakarlso.se</a>
-					For information about Djupviks Hotel: <a href="http://djupvikhotel.com">djupvikhotel.com</a>
-
-					Are you interested of visiting Djupvik by boat?
-					The 24 hour rate is 150 sek including key to the servicehouse 
-					and a 20 sek fee to the two showers. 
-					A connection to the electricity is an additional 50 sek / 24 hour.
-
-					Please contact the portmanager for more inquiries: Bo Lautin, cellnr: +46 707 920310
-				</p>
-
-		</section>
-
-		<!-- page footer -->
-		<footer>
-			<h2>Not a member?</h2>
+	<!-- english information about Djupviks Hamn -->
+	<section id="englishInfo">
+		<h2>Welcome to Djupvik</h2>
 			<p>
-				Become one today!
-			</p>
-		</footer>
+				The Port of Djupvik is located on the east coast of Gotland 
+				very close to the beautiful smaller island Lilla Karlsö.
+				Adjacent to the the port is a small and charming fishing-village 
+				which, during summer, comes to life with a relaxed and welcoming buzz.
 
-	</body>
+				Close by and situated with a fantastic view over the port is 
+				Djupviks Hotel, with modern standard and with its own popular restaurant.
+
+				Both the port and the fishing-village has a beautiful view of 
+				two popular bird-islands called “Lilla Karlsö” and “Stora Karlsö”.
+
+				The coastline south of Djupvik, called “Ekstakusten” is incredibly 
+				beautiful and invites to nice scenery and views on foot, by bike or by car.
+
+				North, and connected to the port is a small sandy beach which is well soothed for a nice swim.
+
+				The distance from the port to Lilla Karlsö is about 2 nautical 
+				miles and it is about twice as long to Stora Karlsö (4nm).
+
+				<!-- https is more or less the standard nowadays, can it be assumed that it is used for the links? -->
+				For more information, check out the websites: <a href="http://lillakarlso.org">lillakarlso.org</a> and <a href="http://storakarlso.se">storakarlso.se</a>
+				For information about Djupviks Hotel: <a href="http://djupvikhotel.com">djupvikhotel.com</a>
+
+				Are you interested of visiting Djupvik by boat?
+				The 24 hour rate is 150 sek including key to the servicehouse 
+				and a 20 sek fee to the two showers. 
+				A connection to the electricity is an additional 50 sek / 24 hour.
+
+				Please contact the portmanager for more inquiries: Bo Lautin, cellnr: +46 707 920310
+			</p>
+
+	</section>
+
+	<!-- page footer -->
+	<footer>
+		<h2>Not a member?</h2>
+		<p>
+			Become one today!
+		</p>
+	</footer>
+
+</body>
 </html>
