added basic (horrendous) styling to pages, now to fix this mess

--- a/html/english.html
+++ b/html/english.html
@@ -4,6 +4,8 @@
 <head>
 	<title>In English - Djupviks Hamn</title>
 	<meta charset="UTF-8" />
+	<link rel="stylesheet" type="text/css" href="../styles/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -32,22 +34,22 @@
 
 	</header>
 	
-	<!-- images from Djupvik -->
-	<figure id="infoImages">
-		<!-- will need reformatting in width and/or height when CSS is introduced -->
-		<img src="../images/garngard-daniel.jpg" alt="Djupvik's garngard, a place for fishermen to hang dry their nets." width="100"/>
-		<img src="../images/solnedgang.jpg" alt="Sunset over the harbour." width="100"/>
-		<img src="../images/hamn-eva.jpg" alt="A fishing boat arrives at the harbour." width="100"/>
-
-		<figcaption>
-			En bild säger mer än tusen ord, vi skulle dock behövt många fler 
-			bilder för att ge dig en komplett bild utav Djupvik.
-		</figcaption>
-
-	</figure>
-
 	<!-- english information about Djupviks Hamn -->
 	<section id="englishInfo">
+		<!-- images from Djupvik -->
+		<figure id="infoImages">
+			<!-- will need reformatting in width and/or height when CSS is introduced -->
+			<img src="../images/garngard-daniel.jpg" alt="Djupvik's garngard, a place for fishermen to hang dry their nets." width="100"/>
+			<img src="../images/solnedgang.jpg" alt="Sunset over the harbour." width="100"/>
+			<img src="../images/hamn-eva.jpg" alt="A fishing boat arrives at the harbour." width="100"/>
+
+			<figcaption>
+				En bild säger mer än tusen ord, vi skulle dock behövt många fler 
+				bilder för att ge dig en komplett bild utav Djupvik.
+			</figcaption>
+
+		</figure>
+
 		<h2>Welcome to Djupvik</h2>
 			<p>
 				The Port of Djupvik is located on the east coast of Gotland 
