--- a/html/guest.html
+++ b/html/guest.html
@@ -4,6 +4,8 @@
 <head>
 	<title>Gästplatser - Djupviks Hamn</title>
 	<meta charset="UTF-8" />
+	<link rel="stylesheet" type="text/css" href="../styles/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans" rel="stylesheet">
 </head>
 
 <body>
