--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 	<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 -->
-asd
+
 <html lang="sv">
 <head>
 	<title>Start - Djupviks Hamn</title>
 	<meta charset="UTF-8" />
+	<link rel="stylesheet" type="text/css" href="./styles/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans" rel="stylesheet">
 </head>
 
 <body>
