Further work on page styles, some elements are now more correctly displayed than before

--- a/html/english.html
+++ b/html/english.html
@@ -13,7 +13,7 @@
 	<!-- page header -->
 	<header>
 		<!-- index page for djupviks hamn -->
-		<h1>Djupvik</h1>
+		<h1 id="pageHeader">Djupvik</h1>
 
 		<!-- header image -->
 		<img src="../images/layout/header.png" width="1900" 
@@ -21,14 +21,14 @@
 
 		<!-- site navigation -->
 		<nav>
-			<ul>
+			<ul id="nav">
 				<li><a href="../index.html">Start</a></li>
 				<li><a href="./info.html">Information</a></li>
 				<li><a href="./guest.html">Guest moorings</a></li>
 				<li><a href="./history.html">History</a></li>
 				<li><a href="./contact.html">Contact</a></li>
 				<li><a href="./members.html">Members</a></li>
-				<li><a href="./english.html">In English</a></li>
+				<li><a href="./english.html" class="active">In English</a></li>
 			</ul>
 		</nav>
 
@@ -87,9 +87,8 @@
 
 	<!-- page footer -->
 	<footer>
-		<h2>Not a member?</h2>
 		<p>
-			Become one today!
+			Är du medlem i hamnföreningen och saknar tillgång till medlemssidan? Skicka e-post till info [at] djupvikshamn.se
 		</p>
 	</footer>
 
