--- a/html/guest.html
+++ b/html/guest.html
@@ -13,7 +13,7 @@
 	<!-- page header -->
 	<header>
 		<!-- index page for djupviks hamn -->
-		<h1>Djupvik</h1>
+		<h1 id="pageHeader">Djupvik</h1>
 
 		<!-- header image -->
 		<img src="../images/layout/header.png" width="1900" 
@@ -21,10 +21,10 @@
 
 		<!-- site navigation -->
 		<nav>
-			<ul>
+			<ul id="nav">
 				<li><a href="../index.html">Start</a></li>
 				<li><a href="./info.html">Information</a></li>
-				<li><a href="./guest.html">Gästplatser</a></li>
+				<li><a href="./guest.html" class="active">Gästplatser</a></li>
 				<li><a href="./history.html">Historia</a></li>
 				<li><a href="./contact.html">Kontakt</a></li>
 				<li><a href="./members.html">Medlemsinfo</a></li>
@@ -117,9 +117,8 @@
 
 	<!-- page footer -->
 	<footer>
-		<h2>Not a member?</h2>
 		<p>
-			Become one today!
+			Är du medlem i hamnföreningen och saknar tillgång till medlemssidan? Skicka e-post till info [at] djupvikshamn.se
 		</p>
 	</footer>
 
