--- a/html/info.html
+++ b/html/info.html
@@ -13,7 +13,7 @@
 	<!-- page header -->
 	<header>
 		<!-- index page for djupviks hamn -->
-		<h1>Djupvik</h1>
+		<h1 id="pageHeader">Djupvik</h1>
 
 		<!-- header image -->
 		<img src="../images/layout/header.png" width="1900" 
@@ -21,9 +21,9 @@
 
 		<!-- site navigation -->
 		<nav>
-			<ul>
+			<ul id="nav">
 				<li><a href="../index.html">Start</a></li>
-				<li><a href="./info.html">Information</a></li>
+				<li><a href="./info.html" class="active">Information</a></li>
 				<li><a href="./guest.html">Gästplatser</a></li>
 				<li><a href="./history.html">Historia</a></li>
 				<li><a href="./contact.html">Kontakt</a></li>
@@ -35,7 +35,7 @@
 	</header>
 
 	<!-- information about Djupvik and it's surroundings -->
-	<section>
+	<section id="content">
 		<h2>Information om Djupvik</h2>
 
 			<figure>
@@ -65,9 +65,8 @@
 
 	<!-- page footer -->
 	<footer>
-		<h2>Inte medlem?</h2>
 		<p>
-			Såhär gör du!
+			Är du medlem i hamnföreningen och saknar tillgång till medlemssidan? Skicka e-post till info [at] djupvikshamn.se
 		</p>
 	</footer>
 
