--- a/html/english.html
+++ b/html/english.html
@@ -12,12 +12,12 @@
 
 	<!-- page header -->
 	<header>
-		<!-- index page for djupviks hamn -->
-		<h1 id="pageHeader">Djupvik</h1>
-
 		<!-- header image -->
-		<img src="../images/layout/header.png" width="1900" 
+		<img id="headerImage" src="../images/layout/header.png" 
 		alt="Sidans rubrikbild, vy över havet vid solnedgång"/>
+
+		<!-- index page for djupviks hamn -->
+		<h1 id="pageHeader"><span>Djupvik</span></h1>
 
 		<!-- site navigation -->
 		<nav>
@@ -35,53 +35,69 @@
 	</header>
 	
 	<!-- english information about Djupviks Hamn -->
-	<section id="englishInfo">
-		<!-- images from Djupvik -->
-		<figure id="infoImages">
-			<!-- will need reformatting in width and/or height when CSS is introduced -->
-			<img src="../images/garngard-daniel.jpg" alt="Djupvik's garngard, a place for fishermen to hang dry their nets." width="100"/>
-			<img src="../images/solnedgang.jpg" alt="Sunset over the harbour." width="100"/>
-			<img src="../images/hamn-eva.jpg" alt="A fishing boat arrives at the harbour." width="100"/>
+	<section class="container">
 
-			<figcaption>
-				En bild säger mer än tusen ord, vi skulle dock behövt många fler 
-				bilder för att ge dig en komplett bild utav Djupvik.
-			</figcaption>
+		<section class="content">
 
-		</figure>
+			<!-- images from Djupvik -->
+			<figure class="images" id="englishImages">
+				<!-- will need reformatting in width and/or height when CSS is introduced -->
+				<img src="../images/garngard-daniel.jpg" alt="Djupvik's garngard, a place for fishermen to hang dry their nets." width="80%" class="fancyimage" />
+				<img src="../images/solnedgang.jpg" alt="Sunset over the harbour." width="80%" class="fancyimage" />
+				<img src="../images/hamn-eva.jpg" alt="A fishing boat arrives at the harbour." width="80%" class="fancyimage" />
 
-		<h2>Welcome to Djupvik</h2>
-			<p>
-				The Port of Djupvik is located on the east coast of Gotland 
-				very close to the beautiful smaller island Lilla Karlsö.
-				Adjacent to the the port is a small and charming fishing-village 
-				which, during summer, comes to life with a relaxed and welcoming buzz.
+				<figcaption>
+					A picture is worth a thousand words, but we would need many
+					more in order to give you a complete picture of Djupvik.
+				</figcaption>
 
-				Close by and situated with a fantastic view over the port is 
-				Djupviks Hotel, with modern standard and with its own popular restaurant.
+			</figure>
 
-				Both the port and the fishing-village has a beautiful view of 
-				two popular bird-islands called “Lilla Karlsö” and “Stora Karlsö”.
+			<section class="englishPageContent">
+				<h2>Welcome to Djupvik</h2>
+					<p>
+						The Port of Djupvik is located on the east coast of Gotland 
+						very close to the beautiful smaller island Lilla Karlsö.
+						Adjacent to the the port is a small and charming fishing-village 
+						which, during summer, comes to life with a relaxed and welcoming buzz.
+					</p>
+					<p>
+						Close by and situated with a fantastic view over the port is 
+						Djupviks Hotel, with modern standard and with its own popular restaurant.
+					</p>
+					<p>
+						Both the port and the fishing-village has a beautiful view of 
+						two popular bird-islands called “Lilla Karlsö” and “Stora Karlsö”.
+					</p>
+					<p>
+						The coastline south of Djupvik, called “Ekstakusten” is incredibly 
+						beautiful and invites to nice scenery and views on foot, by bike or by car.
+					</p>
+					<p>
+						North, and connected to the port is a small sandy beach which is well soothed for a nice swim.
+					</p>
+					<p>
+						The distance from the port to Lilla Karlsö is about 2 nautical 
+						miles and it is about twice as long to Stora Karlsö (4nm).
+					</p>
+					<p>
+						For more information, check out the websites: <a href="http://lillakarlso.org">lillakarlso.org</a> and <a href="http://storakarlso.se">storakarlso.se</a>
+						For information about Djupviks Hotel: <a href="http://djupvikhotel.com">djupvikhotel.com</a>
+					</p>
+					<p>
+						Are you interested of visiting Djupvik by boat?
+						The 24 hour rate is 150 sek including key to the servicehouse 
+						and a 20 sek fee to the two showers. 
+						A connection to the electricity is an additional 50 sek / 24 hour.
+					</p>
+					<p>
+						Please contact the port manager for more inquiries: Bo Lautin, phone: +4670 - 792 03 10
+					</p>
+			</section>
 
-				The coastline south of Djupvik, called “Ekstakusten” is incredibly 
-				beautiful and invites to nice scenery and views on foot, by bike or by car.
+		</section>
 
-				North, and connected to the port is a small sandy beach which is well soothed for a nice swim.
 
-				The distance from the port to Lilla Karlsö is about 2 nautical 
-				miles and it is about twice as long to Stora Karlsö (4nm).
-
-				<!-- https is more or less the standard nowadays, can it be assumed that it is used for the links? -->
-				For more information, check out the websites: <a href="http://lillakarlso.org">lillakarlso.org</a> and <a href="http://storakarlso.se">storakarlso.se</a>
-				For information about Djupviks Hotel: <a href="http://djupvikhotel.com">djupvikhotel.com</a>
-
-				Are you interested of visiting Djupvik by boat?
-				The 24 hour rate is 150 sek including key to the servicehouse 
-				and a 20 sek fee to the two showers. 
-				A connection to the electricity is an additional 50 sek / 24 hour.
-
-				Please contact the portmanager for more inquiries: Bo Lautin, cellnr: +46 707 920310
-			</p>
 
 	</section>
 
