--- a/html/guest.html
+++ b/html/guest.html
@@ -12,12 +12,12 @@
 
 	<!-- page header -->
 	<header>
-		<!-- index page for djupviks hamn -->
-		<h1 id="pageHeader">Djupvik</h1>
-
 		<!-- header image -->
-		<img src="../images/layout/header.png" width="1900" 
+		<img id="headerImage" src="../images/layout/header.png" 
 		alt="Sidans rubrikbild, vy över havet vid solnedgång"/>
+
+		<!-- index page for djupviks hamn -->
+		<h1 id="pageHeader"><span>Djupvik</span></h1>
 
 		<!-- site navigation -->
 		<nav>
@@ -35,83 +35,87 @@
 	</header>
 
 	<!-- information about mooring spots for guests -->
-	<section id="gastPlatsInfo">
-		<h2>Information för besökande angående båtplatser</h2>
-			<p>
-				Gästbåtar är hjärtligt välkomna! Ring gärna hamnfogden för att få reda på aktuellt läge.
-				Dygnshyra 150:-/dygn*
-				El-anslutning 50:-/dygn
-				*inkluderar kort för tillträde till servicehuset och 20:- för två duschar.
+	<section class="container">
+		<section id="gastPlatsInfo" class="content">
+			<h2>Information för besökande angående båtplatser</h2>
+				<p>
+					Gästbåtar är hjärtligt välkomna! Ring gärna hamnfogden för att få reda på aktuellt läge.
+					Dygnshyra 150:-/dygn*
+					El-anslutning 50:-/dygn
+					*inkluderar kort för tillträde till servicehuset och 20:- för två duschar.
+				</p>
+				<p>
+					Hamnfogde
+					<!-- cell nr rewritten in ITU-approved format -->
+					Bo Lautin: Mobil 070 - 792 03 10
+				</p>
 
-				Hamnfogde
-				<!-- consider writing nr in ITU-approved format -->
-				Bo Lautin: Mobil 0707 - 92 03 10
-			</p>
+		</section>
 
-	</section>
+		<section id="vaderInfo" class="content">
+			<h2>Väder</h2>
 
-	<section id="vaderInfo">
-		<h2>Väder</h2>
+				<!-- todays weather -->
+				<section id="vaderIdag">
+					<h3>I dag</h3>
 
-			<!-- todays weather -->
-			<section id="vaderIdag">
-				<h3>I dag</h3>
+						<table>
+							<tr>
+								<th>KL</th>
+								<th>Temp</th>
+								<th>Vind</th>
+								<th>Himmel</th>
+							</tr>
+							<tr>
+								<td>12</td>
+								<td>15</td>
+								<td>&uarr; (6)</td>
+								<td>Nearly clear sky</td>
+							</tr>
+							<tr>
+								<td>18</td>
+								<td>16</td>
+								<td>&uarr; (5)</td>
+								<td>Nearly clear sky</td>
+							</tr>
+						</table>
 
-					<table>
-						<tr>
-							<th>KL</th>
-							<th>Temp</th>
-							<th>Vind</th>
-							<th>Himmel</th>
-						</tr>
-						<tr>
-							<td>12</td>
-							<td>15</td>
-							<td>&uarr; (6)</td>
-							<td>Nearly clear sky</td>
-						</tr>
-						<tr>
-							<td>18</td>
-							<td>16</td>
-							<td>&uarr; (5)</td>
-							<td>Nearly clear sky</td>
-						</tr>
-					</table>
+				</section>
 
-			</section>
+				<!-- tomorrows weather -->
+				<section id="vaderImorgon">
+					<h3>I morgon</h3>
 
-			<!-- tomorrows weather -->
-			<section id="vaderImorgon">
-				<h3>I morgon</h3>
+						<table>
+							<tr>
+								<th>KL</th>
+								<th>Temp</th>
+								<th>Vind</th>
+								<th>Himmel</th>
+							</tr>
+							<tr>
+								<td>6</td>
+								<td>13</td>
+								<td>&larr; (2)</td>
+								<td>Nearly clear sky</td>
+							</tr>
+							<tr>
+								<td>12</td>
+								<td>15</td>
+								<td>&rarr; (6)</td>
+								<td>Nearly clear sky</td>
+							</tr>
+							<tr>
+								<td>18</td>
+								<td>16</td>
+								<td>&rarr; (5)</td>
+								<td>Nearly clear sky</td>
+							</tr>
+						</table>
 
-					<table>
-						<tr>
-							<th>KL</th>
-							<th>Temp</th>
-							<th>Vind</th>
-							<th>Himmel</th>
-						</tr>
-						<tr>
-							<td>6</td>
-							<td>13</td>
-							<td>&larr; (2)</td>
-							<td>Nearly clear sky</td>
-						</tr>
-						<tr>
-							<td>12</td>
-							<td>15</td>
-							<td>&rarr; (6)</td>
-							<td>Nearly clear sky</td>
-						</tr>
-						<tr>
-							<td>18</td>
-							<td>16</td>
-							<td>&rarr; (5)</td>
-							<td>Nearly clear sky</td>
-						</tr>
-					</table>
+				</section>
 
-			</section>
+		</section>
 
 	</section>
 
