--- a/html/info.html
+++ b/html/info.html
@@ -12,12 +12,12 @@
 
 	<!-- page header -->
 	<header>
-		<!-- index page for djupviks hamn -->
-		<h1 id="pageHeader">Djupvik</h1>
-
 		<!-- header image -->
-		<img src="../images/layout/header.png" width="1900" 
+		<img id="headerImage" src="../images/layout/header.png" 
 		alt="Sidans rubrikbild, vy över havet vid solnedgång"/>
+
+		<!-- index page for djupviks hamn -->
+		<h1 id="pageHeader"><span>Djupvik</span></h1>
 
 		<!-- site navigation -->
 		<nav>
@@ -35,33 +35,33 @@
 	</header>
 
 	<!-- information about Djupvik and it's surroundings -->
-	<section id="content">
-		<h2>Information om Djupvik</h2>
+	<section class="container">
+		<section class="content">
+			<h2 id="contentHeader">Information om Djupvik</h2>
 
-			<figure>
-				<!-- set width of images for now until we get CSS to do it for us -->
-				<img src="../images/boats_in_dock.jpg" alt="Båtar förtöjda vid en av djupviks bryggor." width="200" />
-				<img src="../images/stuff.jpg" alt="Djupviks Hammnkiosk." width="200" />
-			</figure>
+				<figure class="infoFigure">
+					<!-- set width of images for now until we get CSS to do it for us -->
+					<img src="../images/boats_in_dock.jpg" alt="Båtar förtöjda vid en av djupviks bryggor." width="100%" class="infoImage" />
+					<img src="../images/stuff.jpg" alt="Djupviks Hammnkiosk." width="100%" class="infoImage" />
+				</figure>
 
-			<p>
-				Hamnen och det gamla fiskeläget ligger med utsikt över både Lilla Karlsö och Stora Karlsö.
-				Kuststräckan söder om Djupvik, den s.k. Ekstakusten, är otroligt vacker och inbjuder till härliga turer med bil, cykel eller till fots. Omedelbart norr om hamnen ligger en fin sandstrand som lämpar sig väl för bad.
-			</p>
-			<p>
-				Från Djupviks hamn är det ca 2 nm ut till fågelön Lilla Karlsö. (<a href="http://lillakarlso.org">http://lillakarlso.org/</a>) och ca 4 nm till Stora Karlsö. (<a href="http://storakarlso.se">http://www.storakarlso.se/</a>)
-			</p>
-			<p>
-				250 m ovanför hamnen och fiskeläget finns Djupviks hotell. De erbjuder mat, dryck och logi. (<a href="http://www.djupvikhotel.com/">http://www.djupvikhotel.com/</a>)
-			</p>
-			<!-- is this supposed to be a quote? change to q if so -->
-			<p>
-				Djupvik är något som måste upplevas!
-			</p>
+				<p>
+					Hamnen och det gamla fiskeläget ligger med utsikt över både Lilla Karlsö och Stora Karlsö.
+					Kuststräckan söder om Djupvik, den s.k. Ekstakusten, är otroligt vacker och inbjuder till härliga turer med bil, cykel eller till fots. Omedelbart norr om hamnen ligger en fin sandstrand som lämpar sig väl för bad.
+				</p>
+				<p>
+					Från Djupviks hamn är det ca 2 nm ut till fågelön <a href="http://lillakarlso.org">Lilla Karlsö.</a> och ca 4 nm till <a href="http://storakarlso.se">Stora Karlsö.</a>
+				</p>
+				<p>
+					250 m ovanför hamnen och fiskeläget finns <a href="http://www.djupvikhotel.com/">Djupviks hotell</a>. De erbjuder mat, dryck och logi.
+				</p>
+				<!-- is this supposed to be a quote? change to q if so -->
+				<p>
+					Djupvik är något som måste upplevas!
+				</p>
 
+		</section>
 	</section>
-
-
 
 	<!-- page footer -->
 	<footer>
