--- a/html/members.html
+++ b/html/members.html
@@ -12,12 +12,12 @@
 
 	<!-- page header -->
 	<header>
-		<!-- index page for djupviks hamn -->
-		<h1 id="pageHeader">Djupvik</h1>
-
 		<!-- header image -->
-		<img src="../images/layout/header.png" width="1900" 
+		<img id="headerImage" src="../images/layout/header.png" 
 		alt="Sidans rubrikbild, vy över havet vid solnedgång"/>
+
+		<!-- index page for djupviks hamn -->
+		<h1 id="pageHeader"><span>Djupvik</span></h1>
 
 		<!-- site navigation -->
 		<nav>
@@ -35,69 +35,71 @@
 	</header>
 
 	<!-- information about Djupvik's members -->
-	<section>
-		<h2>Medlemmar</h2>
+	<section class="container">
+		<section class="content" id="memberlist">
+			<h2>Medlemmar</h2>
 
-			<table>
-				<tr>
-					<th>Förnamn</th>
-					<th>Efternamn</th>
-					<!-- is bostadsadress != postadress? -->
-					<!-- what i believe you are after:
-					Förnamn, Efternamn, GATUadress, Postnummer och postORT -->
-					<th>Bostadsadress</th>
-					<th>Postnummer och Postadress</th>
-				</tr>
-				<tr>
-					<td>Tarmo</td>
-					<td>Heikkilä</td>
-					<td>Stora Lillgatan 42C</td>
-					<td>123 45 Helsingör</td>
-				</tr>
-				<tr>
-					<td>Vesa</td>
-					<td>Salminen</td>
-					<td>Sveavägen 124</td>
-					<td>987 65 Fryshult</td>
-				</tr>
-				<tr>
-					<td>Sinikka</td>
-					<td>Karjalainen</td>
-					<td>Fjällstigen 63</td>
-					<td>743 89 Luleå</td>
-				</tr>
-				<tr>
-					<td>Kalevi</td>
-					<td>Savolainen</td>
-					<td>Midsommargatan 93</td>
-					<td>836 58 Bengtsfors</td>
-				</tr>
-				<tr>
-					<td>Jorma</td>
-					<td>Ahonen</td>
-					<td>Nattvägen 73</td>
-					<td>874 32 Högbo</td>
-				</tr>
-				<tr>
-					<td>Einari</td>
-					<td>Kallio</td>
-					<td>Skruvmejselgången 64</td>
-					<td>242 32Odensala</td>
-				</tr>
-				<tr>
-					<td>Heikki</td>
-					<td>Pitkänen</td>
-					<td>Stjärngatan 25</td>
-					<td>362 52 Valbo</td>
-				</tr>
-				<tr>
-					<td>Oskari</td>
-					<td>Salo</td>
-					<td>Grönlandsgången 25</td>
-					<td>125 23 Kista</td>
-				</tr>
-			</table>
+				<table>
+					<tr>
+						<th>Förnamn</th>
+						<th>Efternamn</th>
+						<!-- is bostadsadress != postadress? -->
+						<!-- what i believe you are after:
+						Förnamn, Efternamn, GATUadress, Postnummer och postORT -->
+						<th>Bostadsadress</th>
+						<th>Postnummer och Postadress</th>
+					</tr>
+					<tr>
+						<td>Tarmo</td>
+						<td>Heikkilä</td>
+						<td>Stora Lillgatan 42C</td>
+						<td>123 45 Helsingör</td>
+					</tr>
+					<tr>
+						<td>Vesa</td>
+						<td>Salminen</td>
+						<td>Sveavägen 124</td>
+						<td>987 65 Fryshult</td>
+					</tr>
+					<tr>
+						<td>Sinikka</td>
+						<td>Karjalainen</td>
+						<td>Fjällstigen 63</td>
+						<td>743 89 Luleå</td>
+					</tr>
+					<tr>
+						<td>Kalevi</td>
+						<td>Savolainen</td>
+						<td>Midsommargatan 93</td>
+						<td>836 58 Bengtsfors</td>
+					</tr>
+					<tr>
+						<td>Jorma</td>
+						<td>Ahonen</td>
+						<td>Nattvägen 73</td>
+						<td>874 32 Högbo</td>
+					</tr>
+					<tr>
+						<td>Einari</td>
+						<td>Kallio</td>
+						<td>Skruvmejselgången 64</td>
+						<td>242 32Odensala</td>
+					</tr>
+					<tr>
+						<td>Heikki</td>
+						<td>Pitkänen</td>
+						<td>Stjärngatan 25</td>
+						<td>362 52 Valbo</td>
+					</tr>
+					<tr>
+						<td>Oskari</td>
+						<td>Salo</td>
+						<td>Grönlandsgången 25</td>
+						<td>125 23 Kista</td>
+					</tr>
+				</table>
 
+		</section>
 	</section>
 
 
