lots of work on the CSS document and related changes to the HTML documents main focus on condensing the CSS to shorthand format, as well as commenting according to the super-unclear guidelines provided for the task

--- a/html/english.html
+++ b/html/english.html
@@ -24,7 +24,7 @@
 			<ul id="nav">
 				<li><a href="../index.html">Start</a></li>
 				<li><a href="./info.html">Information</a></li>
-				<li><a href="./guest.html">Guest moorings</a></li>
+				<li><a href="./guest.html">Guests</a></li>
 				<li><a href="./history.html">History</a></li>
 				<li><a href="./contact.html">Contact</a></li>
 				<li><a href="./members.html">Members</a></li>
