--- a/html/members.html
+++ b/html/members.html
@@ -43,11 +43,8 @@
 					<tr>
 						<th>Förnamn</th>
 						<th>Efternamn</th>
-						<!-- is bostadsadress != postadress? -->
-						<!-- what i believe you are after:
-						Förnamn, Efternamn, GATUadress, Postnummer och postORT -->
 						<th>Bostadsadress</th>
-						<th>Postnummer och Postadress</th>
+						<th>Postnummer och Postort</th>
 					</tr>
 					<tr>
 						<td>Tarmo</td>
@@ -83,7 +80,7 @@
 						<td>Einari</td>
 						<td>Kallio</td>
 						<td>Skruvmejselgången 64</td>
-						<td>242 32Odensala</td>
+						<td>242 32 Odensala</td>
 					</tr>
 					<tr>
 						<td>Heikki</td>
